services/manager/deployment/grafana-telemetry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-telemetry-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 15031
      name: http2-grafana
      protocol: HTTP2
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: grafana
  namespace: default
spec:
  host: grafana.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE      
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: telemetry-virtual-service
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - istio-telemetry-gateway
  http:
  - match:
    - port: 15031
    route:
    - destination:
        host: grafana.default.svc.cluster.local
        port:
          number: 3000
