services/manager/deployment/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "weather-forecast-backend"
spec:
  rules:
  - http:
      paths:
      - path: /manager/*
        backend:
          serviceName: "manager"
          servicePort: 8000
      - path: /session_manager/*
        backend:
          serviceName: "session-manager"
          servicePort: 8100
      - path: /weather_data_retrieval/*
        backend:
          serviceName: "weather-data-retrieval"
          servicePort: 8200
      - path: /model_execution/*
        backend:
          serviceName: "model-execution"
          servicePort: 8300
