services/manager/deployment/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: manager-vs
spec:
  hosts:
  - '*'
  gateways:
  - istio-gateway
  http:
  - route:
    - destination:
        host: manager-svc
        port:
          number: 8000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: session-manager-vs
spec:
  hosts:
  - '*'
  gateways:
  - istio-gateway
  http:
  - route:
    - destination:
        host: session-manager-svc
        port:
          number: 8100
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: data-retrieval-vs
spec:
  hosts:
  - '*'
  gateways:
  - istio-gateway
  http:
  - route:
    - destination:
        host: data-retrieval-svc
        port:
          number: 8200
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: model-execution-vs
spec:
  hosts:
  - '*'
  gateways:
  - istio-gateway
  http:
  - route:
    - destination:
        host: model-execution-svc
        port:
          number: 8300
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: postprocessor-vs
spec:
  hosts:
  - '*'
  gateways:
  - istio-gateway
  http:
  - route:
    - destination:
        host: postprocessor-svc
        port:
          number: 8400
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user-server-vs
spec:
  hosts:
  - '*'
  gateways:
  - istio-gateway
  http:
  - route:
    - destination:
        host: user-server-svc
        port:
          number: 5000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user-interface-vs
spec:
  hosts:
  - '*'
  gateways:
  - istio-gateway
  http:
  - route:
    - destination:
        host: user-interface-svc
        port:
          number: 3000
---
