services/manager/deployment/nginx-ingress-resource.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - manager.bobbyrathore.com
        - session.bobbyrathore.com
        - retrieval.bobbyrathore.com
        - model.bobbyrathore.com
      secretName: bobbyrathore-tls
  rules:
  - host: manager.bobbyrathore.com
    http:
      paths:
      - backend:
          serviceName: "manager-svc"
          servicePort: 8000
  - host: session.bobbyrathore.com
    http:
      paths:
      - backend:
          serviceName: "session-manager-svc"
          servicePort: 8100
  - host: retrieval.bobbyrathore.com
    http:
      paths:
        - backend:
            serviceName: "data-retrieval-svc"
            servicePort: 8200
  - host: model.bobbyrathore.com
    http:
      paths:
        - backend:
            serviceName: "model-execution-svc"
            servicePort: 8300
#  - host: postprocessor.bobbyrathore.com
#    http:
#      paths:
#        - backend:
#            serviceName: "postprocessor-svc"
#            servicePort: 8400
